@@ -311,6 +311,13 @@ Elevator::~Elevator()
 		delete messagesnd;
 	}
 	messagesnd = 0;
+	if (music)
+	{
+		EnableMusic(false);
+		music->object->parent_deleting = true;
+		delete music;
+	}
+	music = 0;
 
 	//delete sounds
 	if (sbs->Verbose)
@@ -485,6 +492,8 @@ Object* Elevator::CreateElevator(bool relative, float x, float z, int floor)
 	floorsound->SetPosition(Origin);
 	messagesnd = new Sound(this->object, "Message Sound", true);
 	messagesnd->SetPosition(Origin);
+	music = new Sound(this->object, "Music Sound", true);
+	music->SetPosition(Origin + MusicPosition);
 
 	//set elevator's floor
 	ElevatorFloor = floor;
@@ -1035,6 +1044,9 @@ void Elevator::MonitorLoop()
 			SetACPFloor(tmp);
 		}
 		UpdateFloorIndicators();
+
+		if (InServiceMode() == false)
+			EnableMusic(true); //turn on elevator music if file is specified
 	}
 
 	//play idle sound if in elevator, or if doors open
@@ -1378,6 +1390,7 @@ void Elevator::MoveElevatorToFloor()
 	floorbeep->SetPosition(elevposition);
 	floorsound->SetPosition(elevposition);
 	messagesnd->SetPosition(elevposition);
+	music->SetPosition(elevposition + MusicPosition);
 	for (int i = 0; i < sounds.GetSize(); i++)
 	{
 		if (sounds[i])
@@ -1639,6 +1652,7 @@ void Elevator::MoveElevatorToFloor()
 		floorbeep->SetPosition(GetPosition());
 		floorsound->SetPosition(GetPosition());
 		messagesnd->SetPosition(GetPosition());
+		music->SetPosition(GetPosition() + MusicPosition);
 		for (int i = 0; i < sounds.GetSize(); i++)
 		{
 			if (sounds[i])
@@ -2352,11 +2366,13 @@ void Elevator::EnableIndependentService(bool value)
 		ResetQueue(true, true);
 		if (IsMoving == false)
 			OpenDoors();
+		EnableMusic(false);
 		Report("Independent Service mode enabled");
 	}
 	else
 	{
 		ResetDoorTimer();
+		EnableMusic(true);
 		Report("Independent Service mode disabled");
 	}
 }
@@ -2384,6 +2400,7 @@ void Elevator::EnableInspectionService(bool value)
 		ResetQueue(true, true);
 		if (IsMoving == true)
 			Stop(false);
+		EnableMusic(false);
 		Report("Inspection Service mode enabled");
 	}
 	else
@@ -2419,6 +2436,7 @@ void Elevator::EnableInspectionService(bool value)
 
 		if (IsMoving == true)
 			Stop(false);
+		EnableMusic(true);
 	}
 
 	InspectionService = value;
@@ -2463,6 +2481,7 @@ void Elevator::EnableFireService1(int value)
 		if (value == 1)
 		{
 			Report("Fire Service Phase 1 mode set to On");
+			EnableMusic(false);
 			GoToRecallFloor();
 		}
 		else
@@ -2471,6 +2490,7 @@ void Elevator::EnableFireService1(int value)
 	else
 	{
 		ResetDoorTimer();
+		EnableMusic(true);
 		Report("Fire Service Phase 1 mode set to Off");
 	}
 }
@@ -2512,6 +2532,7 @@ void Elevator::EnableFireService2(int value)
 		EnableInspectionService(false);
 		EnableFireService1(0);
 		ResetQueue(true, true);
+		EnableMusic(false);
 		if (value == 1)
 			Report("Fire Service Phase 2 mode set to On");
 		else
@@ -2524,6 +2545,7 @@ void Elevator::EnableFireService2(int value)
 	else
 	{
 		ResetDoorTimer();
+		EnableMusic(true);
 		Report("Fire Service Phase 2 mode set to Off");
 		GoToRecallFloor();
 	}
@@ -3928,4 +3950,35 @@ bool Elevator::PlayMessageSound(bool direction)
 	messagesnd->Loop(false);
 	messagesnd->Play();
 	return true;
+}
+
+bool Elevator::EnableMusic(bool value)
+{
+	//start or stop elevator music
+
+	if (MusicSound == "")
+		return false;
+
+	if (MusicPosition == 0 && Height > 0)
+		MusicPosition = csVector3(0, Height, 0); //set default music position to elevator height
+
+	if (music->IsPlaying() == true && value == false)
+	{
+		if (sbs->Verbose)
+			Report("stopping music");
+		music->Stop();
+		return true;
+	}
+	if (music->IsPlaying() == false && value == true)
+	{
+		if (sbs->Verbose)
+			Report("playing music");
+		music->SetPosition(GetPosition() + MusicPosition);
+		music->Load(MusicSound);
+		music->Loop(true);
+		music->Play(true);
+		return true;
+	}
+
+	return false;
 }
