@@ -4280,6 +4280,15 @@ int ScriptProcessor::ProcElevators()
 		}
 		elev->SetMessageSound(false, temp2);
 	}
+	if (LineData.Slice(0, 10).CompareNoCase("musicsound") == true)
+	{
+		if (temp2check < 0)
+		{
+			ScriptError("Syntax error");
+			return sError;
+		}
+		elev->MusicSound = temp2;
+	}
 	if (LineData.Slice(0, 13).CompareNoCase("floorskiptext") == true)
 	{
 		if (temp2check < 0)
@@ -4510,6 +4519,37 @@ int ScriptProcessor::ProcElevators()
 			return sError;
 		}
 		elev->NotifyEarly = notify;
+	}
+	if (LineData.Slice(0, 13).CompareNoCase("musicposition") == true)
+	{
+		if (temp2check < 0)
+		{
+			ScriptError("Syntax error");
+			return sError;
+		}
+		tempdata.SplitString(temp2.GetData(), ",");
+		for (temp3 = 0; temp3 < tempdata.GetSize(); temp3++)
+		{
+			buffer = Calc(tempdata[temp3]);
+			tempdata.Put(temp3, buffer);
+		}
+		if (tempdata.GetSize() < 3 || tempdata.GetSize() > 3)
+		{
+			ScriptError("Incorrect number of parameters");
+			return sError;
+		}
+		//check numeric values
+		for (int i = 0; i <= 2; i++)
+		{
+			if (!IsNumeric(csString(tempdata[i]).Trim().GetData()))
+			{
+				ScriptError("Invalid value: " + csString(tempdata[i]));
+				return sError;
+			}
+		}
+
+		elev->MusicPosition = csVector3(atof(tempdata[0]), atof(tempdata[1]), atof(tempdata[2]));
+		tempdata.DeleteAll();
 	}
 
 	//Print command
